--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,12 @@
     <string name="wish_list">Wish List</string>
 
     <string name="search_hint">Search %1$s</string>
-    <string name="only_show_owned">Only Show Owned </string>
-    <string name="skill">Skill </string>
-    <string name="curriculum">Curriculum</string>
-    <string name="style">Style</string>
-    <string name="educator">Educator</string>
-    <string name="series">Series</string>
+    <string name="only_show_owned">Only Show Owned: </string>
+    <string name="skill">Skill: </string>
+    <string name="curriculum">Curriculum: </string>
+    <string name="style">Style: </string>
+    <string name="educator">Educator: </string>
+    <string name="series">Series: </string>
     <string name="no_search_results_found">No search results found</string>
     <string name="no">No</string>
 </resources>
