--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="series">Series: </string>
     <string name="no_search_results_found">No search results found</string>
     <string name="no">No</string>
+    <string name="clear_filters">Clear Filters</string>
 </resources>
